# asicForTranAI

./: .gitignore  ACTION_PLAN_NOW.md  COLD_EMAILS.md  COMPLETE_STATUS.md  EXECUTE_ALL_NOW.md  FILE_INDEX.md  FINAL_PACKAGE_SUMMARY.md  GIT_COMMIT_MESSAGE.txt  KERNEL_SHOWCASE.md  LINKEDIN_API_SETUP.md  LINKEDIN_POST.md  MASTER_PLAN_ABC.md  MVP_CHECKPOINTS.md  NEXT_STEPS.md  PUSH_INSTRUCTIONS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REPO_STATUS_2025-12-03.md  RESPONSE_TEMPLATES.md  SESSION_COMPLETE.md  SESSION_COMPLETE_FINAL.md  START_HERE.md  START_NOW.md  VISION_2025_2032.md  VISION_VERIFICATION_2025-12-03.md  WEEK_2_3_TIMELINE.md  WEEK_2_FOLLOWUP_CONTENT.md  daily-4hour-life.sh  demo.sh  linkedin_post_automation.py  mvp.md
.claude/: mcp_config_guide.md  settings.local.json
2025-3.5bit-groq-mvp/: .gitignore  COMPLETE_SUMMARY.md  CONTRIBUTING.md  DUAL_BOOT_RECOMMENDATION.md  Dockerfile.inference  Dockerfile.inference.gpu  GROQ_DEPLOYMENT.md  HARDWARE_REQUIREMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_ROADMAP.md  PLATFORM_SETUP.md  PROJECT_STATUS.md  Q1_2026_STRATEGY.md  README.md  RTX_2080_TI_SETUP.md  WINDOWS_SIMPLE_SETUP.md  YOUR_HARDWARE_SETUP.md  bench_simd  benchmark_llama.f90  benchmark_optimizations.f90  gen_test_weights  generate_paper_benchmarks.py  generate_test_weights.f90  llama_generate.f90  llama_model.f90  matmul_3p5bit_dynamic.f90  matmul_int4_groq.f90  matmul_int4_groq.mod  matmul_simd_optimized.f90  matmul_simd_optimized.mod  prompt.txt  sampling.f90  sampling.mod  test_api_key.sh  test_int4_matmul.f90  test_layer  test_sampling  test_sampling.f90  (+5 more)
2025-3.5bit-groq-mvp/api/: broker_gateway.py  inference_api.py  market_gateway.py  requirements.txt
2025-3.5bit-groq-mvp/career/: COVER_LETTERS.md  RESUME_TECHNICAL.md
2025-3.5bit-groq-mvp/paper/: BENCHMARKS_README.md  PAPER_COMPLETE.md  README.md  SUBMISSION_GUIDE.md  generate_figures.py  paper.tex  supplementary.tex
2025-3.5bit-groq-mvp/paper/data/: benchmarks.json
2025-3.5bit-groq-mvp/scripts/: README.md  convert_weights_to_fortran.py  deploy_to_groq.sh  download_llama_weights.py  tokenizer.py
2025-3.5bit-groq-mvp/weights_fortran_13b/: weights_layer0_meta.json  weights_layer10_meta.json  weights_layer11_meta.json  weights_layer12_meta.json  weights_layer13_meta.json  weights_layer14_meta.json  weights_layer15_meta.json  weights_layer16_meta.json  weights_layer17_meta.json  weights_layer18_meta.json  weights_layer19_meta.json  weights_layer1_meta.json  weights_layer20_meta.json  weights_layer21_meta.json  weights_layer22_meta.json  weights_layer23_meta.json  weights_layer24_meta.json  weights_layer25_meta.json  weights_layer26_meta.json  weights_layer27_meta.json  weights_layer28_meta.json  weights_layer29_meta.json  weights_layer2_meta.json  weights_layer30_meta.json  weights_layer31_meta.json  weights_layer32_meta.json  weights_layer33_meta.json  weights_layer34_meta.json  weights_layer35_meta.json  weights_layer36_meta.json  weights_layer37_meta.json  weights_layer38_meta.json  weights_layer39_meta.json  weights_layer3_meta.json  weights_layer4_meta.json  weights_layer5_meta.json  weights_layer6_meta.json  weights_layer7_meta.json  weights_layer8_meta.json  weights_layer9_meta.json
agents/llama33-70b/: README.md  daily-three-books-agent.py
agents/ministral-3-local/: README.md  daily-annotation-ollama.py
agents/mistral3-edge/: README.md  mistral3-edge-agent.py  quick-test.py
books-ai-publishing/: .gitignore  IMPLEMENTATION-SUMMARY.md  NOTEBOOKLM-INTEGRATION.md  QUICKSTART.md  README.md  config.yaml  requirements.txt
books-ai-publishing/agents/: 01-chief-editor.md  02-annotator.md  03-ai-strategist.md  04-proofreader.md  05-publisher.md
books-ai-publishing/drafts/: 2025-12-03-example.md
books-ai-publishing/proofread/: 2025-12-03-sunzi-始计篇.md
books-ai-publishing/scripts/: agent1_chief_editor.py  agent_core.py  daily-flow-claude.sh  daily-flow.sh  setup.sh
docs/: ADA_SPARK_INTEGRATION.md  ALPHAPROOF_AUTOMATION_RESULTS.md  BRD_Business_Requirements.md  CEREBRAS_EMAIL_DRAFT.md  CRYPTO_WALLET_INTEGRATION.md  DEPLOY.md  EXECUTIVE_BRIEFING.md  GAZILLIONER_MVP_PLAYBOOK.md  GAZILLIONER_PIVOT_STRATEGY.md  GAZILLIONER_PLATFORM_VISION.md  GROQ_EMAIL_DRAFT.md  IMMEDIATE_ACTION_PLAN.md  INTEGRATION_AND_TRACTION.md  IP_AND_INTEGRATION_STRATEGY.md  MINISTRAL3_RESEARCH_ALIGNMENT.md  NEURIPS_2026_DRAFT_V1.md  ONE_PAGE_OVERVIEW.md  OUTREACH_READY.md  README.md  SMART_GLASSES_OPPORTUNITY.md  STANDALONE_DEVICE_ARCHITECTURE.md  STRATEGIC_UPDATE_DEC2025.md  STRATEGY_2025_UPDATE.md  WEBSITE_READY.md  WEEK1_CHECKLIST.md  WEEK_3_GPU_DEMO_GUIDE.md  WHY_LLAMA_NOT_DEEPSEEK.md  YOUR_HARDWARE_SETUP.md  _config.yml  blog_fortran_llm_2025.md  blog_spark_lean_verification.md  index.html  technical.html
experiments/: plot_results.py  results_3p5bit.json  run_llama_70b_experiments.py
gazillioner/: Makefile  README.md  go.sum
gazillioner/docs/: RND_STRATEGY_2025.md
gazillioner/pkg/crypto/: Cargo.toml
gazillioner/pkg/crypto/src/: audit.rs  compliance.rs  crypto.rs  db.rs  error.rs  ffi.rs  lib.rs  models.rs
gazillioner/pkg/sync/: Cargo.toml
gazillioner/pkg/sync/src/: audit.rs  conflict.rs  diff.rs  discovery.rs  error.rs  ffi.rs  lib.rs  pairing.rs  protocol.rs  transport.rs
gazillioner/pkg/wallet/: Cargo.toml
gazillioner/pkg/wallet/src/: airgap.rs  btc.rs  error.rs  eth.rs  evm.rs  ffi.rs  hd.rs  lib.rs  mnemonic.rs  multichain.rs  signing.rs  sol.rs
lean-alphaproof-mcts/: AlphaProof.lean  AlphaProofDemo.lean  PolicyNetworkTraining.lean  Quantization3p5bitProof.lean  TransformerLayer.lean  mcts_proof.lean
lean-verification/Quantization3p5bit/: Basic.lean  ErrorBounds.lean  MatMul.lean
spark-llama-safety/: README_GNAT.md  install_gnat.sh  matmul_safe.ads  test_transformer.adb  transformer.gpr
three-books-ai-annotations/sun-tzu-ai-notes/: agent-prompt.md
v3_ultimate/: README.md  analyze_performance.py  test_all.sh
(+37 files in other folders)
