[package]
name = "gazillioner-sync"
version = "0.1.0"
edition = "2021"
authors = ["Gazillioner Inc."]
description = "P2P sync layer for Gazillioner with E2E encryption"
license = "Proprietary"
repository = "https://github.com/gazillioner/gazillioner"

[lib]
name = "gazillioner_sync"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# mDNS/DNS-SD for local network discovery
mdns-sd = "0.11"

# TLS 1.3 with rustls
rustls = "0.23"
rustls-pemfile = "2.0"
webpki-roots = "0.26"
rcgen = "0.13"  # Certificate generation

# Tokio for async networking
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"

# Cryptography
ring = "0.17"
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# FFI
libc = "0.2"

# HMAC for integrity
hmac = "0.12"
sha2 = "0.10"

# Lazy initialization for FFI
once_cell = "1.19"

# Logging
tracing = "0.1"

# Zeroize for secure memory clearing
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []
ffi = []
